# activation-manager

./: .envrc  .gitignore  Cargo.toml  Makefile.PL  README.md  activation-manager  default.nix  flake.nix  manifest.lua  manifest.rn  package.json  package.nix  pnpm-lock.yaml  pyproject.toml  readme.md  shell.nix  test.nix  test.rn  usage.nix
.github/workflows/: pages.yaml
activation_manager/: __init__.py  __main__.py  activate.py  systemd.py
doc/: .envrc  am.data.js  astro.config.mjs  index.md  nixos.data.ts  options.md  package-lock.json  package.json  shell.nix  tsconfig.json  tsconfig.node.json
doc/.vitepress/: config.mts  config.ts
doc/src/content/docs/: index.mdx
lib/: AM.pm
lib/AM/Command/: switch.pm
lua/addon/: config.json
modules/: .mkPath.nix  bin.nix  dag.nix  default.nix  path.nix  root.nix  rootPath.nix  static.nix  utils.nix
modules/core/: bin.nix  default.nix  manifest.nix  nodes.nix  root.nix  static.nix
modules/home/: base.nix  default.nix  path.nix  systemd.nix
nix/: package.nix
nix/home/: core.nix  default.nix  nixos-module.nix
src/: api.rs  dconf.rs  eval.rs  exec.rs  exec_node.rs  gsettings.rs  lua.rs  main.rs  node.rs
test/: core.nix  home.nix  main.lua  main.nix  nixos.nix
utils/: mkPath.nix
