[package]
name = "activation-manager"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
petgraph = "0.6.4"
rune = { version = "0.13.2", features = [] }
rune-modules = { version = "0.13.2", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
termcolor = "1.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
