[package]
name = "activation-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
base16 = "0.2.1"
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
mlua = { version = "0.10.3", features = ["lua54", "error-send", "serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
