[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "activation-manager"
requires-python = ">=3.11"
dependencies = [
    "networkx"
]
# dynamic = ["version"]
version = "v0.0.1"

[tool.setuptools.packages.find]
include = ["activation_manager"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
activation-manager = "activation_manager.__main__:main"